--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,600,700,800,900" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./public/stitches.css">
     <style type="text/css">
         .js-droppable > .js-snippet {
@@ -139,10 +140,10 @@
     </section>
     <section class="bg-grey-light p-8 w-1/3 flex flex-col fixed pin-t pin-b pin-r overflow-y-scroll">
       <header class="mb-4">
-        <button class="js-download">Download Stitched HTML</button>
+        <button class="border text-center py-2 px-4 border-black w-full rounded text-black hover:bg-black hover:text-white js-download">Download Stitched HTML</button>
       </header>
-      <!-- <div class="instruction">Drag & Drop to Generate HTML</div> -->
       <div class="flex flex-col flex-1 border js-droppable"></div>
+    <div class="bg-white hidden fixed js-delete-btn px-4 py-2 shadow">Delete <i class="far fa-trash-alt"></i></div>
     </section>
     <script src="bundle.js"></script>
   </body>
