--- a/stitches.html
+++ b/stitches.html
@@ -7,101 +7,52 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Stitches</title>
   </head>
-  <body><section class="bg-white py-4 font-sans">
-  <div class="container m-auto max-w-xl flex items-baseline justify-start border-b-2 border-grey-light mb-10">
-  <h2 class="text-grey-dark text-base font-bold tracking-wide uppercase py-4 px-6">All</h2>
-  <h2 class="text-base font-bold tracking-wide uppercase py-4 px-6 border-b-2 border-black -mb-4">Recent</h2>
-  <h2 class="text-grey-dark text-base font-bold tracking-wide uppercase py-4 px-6">Assigned to Me</h2>
-  <h2 class="text-grey-dark text-base font-bold tracking-wide uppercase py-4 px-6">Pending</h2>
+  <body><nav class="font-sans bg-white text-center flex justify-between items-center my-4 mx-auto max-w-xl overflow-hidden">
+  <button class="bg-transparent text-sm hover:text-grey-dark text-grey-darkest py-2 px-3 rounded">
+  Subscribe
+  </button>
+  <ul class="text-sm text-grey-dark list-reset flex items-center">
+    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Products</a></li>
+    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
+    <li class="px-6"><a href="/" >
+      <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210385/stitches/logo.png" class="h-10 sm:h-10 rounded-full" alt="logo">
+    </a></li>
+    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">About Us</a></li>
+    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Status</a></li>
+  </ul>
+  <button class="text-sm bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3 rounded">
+  Log In
+  </button>
+</nav><section class="font-sans container max-w-xl m-auto flex flex-col lg:flex-row justify-center my-8">
+  <div class="order-2 lg:order-1 w-full lg:w-1/4 flex flex-col items-center lg:items-end justify-end text-center lg:text-right ml-0 lg:ml-8 mt-8">
+    <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
+    <h3 class="text-black mb-2 font-light">Feature 1</h3>
+    <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
+    <h3 class="text-black mb-2 font-light">Feature 1</h3>
+    <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
+    <h3 class="text-black mb-2 font-light">Feature 1</h3>
+    <p class="text-sm text-grey-dark leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    </div>
+  <div class="order-1 lg:order-2 w-full lg:w-1/2 max-w-sm m-auto mb-6 lg:mb-0">
+    <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210663/demo-phone.png" alt="">
   </div>
-</section><section class="font-sans flex justify-between mt-6 mx-auto max-w-xl">
-  <a href="#" class="w-1/4 flex flex-col items-center text-center text-xs text-black no-underline">
-    <div class="bg-black text-white rounded-full h-8 w-8 flex items-center justify-center mb-2 z-10"><i class="fas fa-check"></i></div>
-    <label class="font-bold uppercase tracking-wide">Step 1</label>
-  </a>
-  <a href="#" class="w-1/4 relative flex flex-col items-center text-center text-xs text-black no-underline">
-    <div class="bg-black text-white rounded-full h-8 w-8 flex items-center justify-center mb-2 z-10"><i class="fas fa-check"></i></div>
-    <div class="absolute h-1 mt-4 bg-black pin-x -translate-50-50"></div>
-    <label class="font-bold uppercase tracking-wide">Step 2</label>
-  </a>
-  <a href="#" class="w-1/4 relative flex flex-col items-center text-center text-xs text-black no-underline">
-    <div class="bg-black text-white rounded-full h-8 w-8 flex items-center justify-center mb-2 z-10"><i class="fas fa-check"></i></div>
-    <div class="absolute h-1 mt-4 bg-black pin-x -translate-50-50"></div>
-    <label class="font-bold uppercase tracking-wide">Step 3</label>
-  </a>
-  <a href="#" class="w-1/4 relative flex flex-col items-center text-center text-xs text-black no-underline">
-    <div class="bg-grey-dark text-white rounded-full h-8 w-8 flex items-center justify-center mb-2 z-10"><i class="fas fa-check"></i></div>
-    <div class="absolute h-1 mt-4 bg-grey-dark pin-x -translate-50-50"></div>
-    <label class="font-bold uppercase tracking-wide text-grey-dark">Step 4</label>
-  </a>
+  <div class="order-last w-full lg:w-1/4 flex flex-col items-center lg:items-start justify-end text-center lg:text-left mt-8 mr-8">
+    <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
+    <h3 class="text-black mb-2 font-light">Feature 1</h3>
+    <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
+    <h3 class="text-black mb-2 font-light">Feature 1</h3>
+    <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
+    <h3 class="text-black mb-2 font-light">Feature 1</h3>
+    <p class="text-sm text-grey-dark leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    </div>
 </section><section class="font-sans container m-auto flex flex-col py-8 max-w-xl text-center px-6">
   <label class="text-sm uppercase">9 May 2015</label>
   <h1 class="my-8 max-w-full lg:max-w-lg m-auto text-3xl md:text-4xl lg:text-5xl font-light">Lorem Ipsum is simply dummy text of the printing</h1>
   <p class="mt-0 lg:mt-4 max-w-md m-auto leading-normal mb-6 text-left">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
   <p class="max-w-md m-auto leading-normal mb-6 text-left">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-</section><section class="bg-white py-4 font-sans">
-  <div class="container max-w-xl m-auto flex flex-wrap items-center justify-start">
-
-    <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
-      <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
-        <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-display text-grey-darkest mb-4">Desktop Publishing Software like Aldus PageMaker</h3>
-          <p class="inline-flex items-center">
-            <span class="text-grey-dark text-sm">Read More</span>
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
-      <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
-        <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-display text-grey-darkest mb-4">Desktop Publishing Software like Aldus PageMaker</h3>
-          <p class="inline-flex items-center">
-            <span class="text-grey-dark text-sm">Read More</span>
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
-      <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
-        <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-display text-grey-darkest mb-4">Desktop Publishing Software like Aldus PageMaker</h3>
-          <p class="inline-flex items-center">
-            <span class="text-grey-dark text-sm">Read More</span>
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
-      <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
-        <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-display text-grey-darkest mb-4">Desktop Publishing Software like Aldus PageMaker</h3>
-          <p class="inline-flex items-center">
-            <span class="text-grey-dark text-sm">Read More</span>
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
-      <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
-        <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-display text-grey-darkest mb-4">Desktop Publishing Software like Aldus PageMaker</h3>
-          <p class="inline-flex items-center">
-            <span class="text-grey-dark text-sm">Read More</span>
-          </p>
-        </div>
-      </div>
-    </div>
-
-  </div>
 </section></body>
 </html>
