wip on delete snippet

--- a/stitches.html
+++ b/stitches.html
@@ -7,23 +7,48 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Stitches</title>
   </head>
-  <body><nav class="font-sans bg-white text-center flex justify-between items-center my-4 mx-auto max-w-xl overflow-hidden">
-  <button class="bg-transparent text-sm hover:text-grey-dark text-grey-darkest py-2 px-3 rounded">
-  Subscribe
-  </button>
-  <ul class="text-sm text-grey-dark list-reset flex items-center">
-    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Products</a></li>
-    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
-    <li class="px-6"><a href="/" >
-      <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210385/stitches/logo.png" class="h-10 sm:h-10 rounded-full" alt="logo">
-    </a></li>
-    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">About Us</a></li>
-    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Status</a></li>
-  </ul>
-  <button class="text-sm bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3 rounded">
-  Log In
-  </button>
-</nav><section class="font-sans container max-w-xl m-auto flex flex-col lg:flex-row justify-center my-8">
+  <body><section class="font-sans container m-auto max-w-xl xl:max-w-lg flex flex-col flex-wrap sm:flex-row justify-center">
+  <div class="w-full sm:w-1/2 lg:w-1/4 text-center py-8">
+    <label for="" class="uppercase tracking-loose font-bold text-sm">Basic Plan</label>
+    <h1 for="" class="uppercase tracking-loose font-bold text-5xl my-2">$29<span class="text-grey-dark font-light text-xs">/mo</span></h1>
+    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">5</strong>Projects</p>
+    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">20</strong>Images</p>
+    <p class="mt-2 mb-6 text-grey-darker"><strong class="text-black pr-2">9/5</strong>Support</p>
+    <button class="bg-transparent hover:bg-black text-black-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
+    Buy Now
+    </button>
+  </div>
+  <div class="w-full sm:w-1/2 lg:w-1/4 text-center py-8">
+    <label for="" class="uppercase tracking-loose font-bold text-sm">Team Plan</label>
+    <h1 for="" class="uppercase tracking-loose font-bold text-5xl my-2">$59<span class="text-grey-dark font-light text-xs">/mo</span></h1>
+    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">10</strong>Projects</p>
+    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">40</strong>Images</p>
+    <p class="mt-2 mb-6 text-grey-darker"><strong class="text-black pr-2">12/7</strong>Support</p>
+    <button class="bg-transparent hover:bg-black text-black-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
+    Buy Now
+    </button>
+  </div>
+  <div class="w-full sm:w-1/2 lg:w-1/4 text-center py-8">
+    <label for="" class="uppercase tracking-loose font-bold text-sm">Corporate Plan</label>
+    <h1 for="" class="uppercase tracking-loose font-bold text-5xl my-2">$79<span class="text-grey-dark font-light text-xs">/mo</span></h1>
+    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">Unlimited</strong>Projects</p>
+    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">Unlimited</strong>Images</p>
+    <p class="mt-2 mb-6 text-grey-darker"><strong class="text-black pr-2">24/7</strong>Support</p>
+    <button class="bg-transparent hover:bg-black text-black-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
+    Buy Now
+    </button>
+  </div>
+  <div class="w-full sm:w-1/2 lg:w-1/4 text-center py-8">
+    <label for="" class="uppercase tracking-loose font-bold text-sm">Enterprise Plan</label>
+    <h1 for="" class="uppercase tracking-loose font-bold text-5xl my-2">$199<span class="text-grey-dark font-light text-xs">/mo</span></h1>
+    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">Unlimited</strong>Projects</p>
+    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">Unlimited</strong>Images</p>
+    <p class="mt-2 mb-6 text-grey-darker"><strong class="text-black pr-2">24/7</strong>Support</p>
+    <button class="bg-transparent hover:bg-black text-black-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
+    Buy Now
+    </button>
+  </div>
+</section><section class="font-sans container max-w-xl m-auto flex flex-col lg:flex-row justify-center my-8">
   <div class="order-2 lg:order-1 w-full lg:w-1/4 flex flex-col items-center lg:items-end justify-end text-center lg:text-right ml-0 lg:ml-8 mt-8">
     <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
     <h3 class="text-black mb-2 font-light">Feature 1</h3>
@@ -49,10 +74,5 @@
     <h3 class="text-black mb-2 font-light">Feature 1</h3>
     <p class="text-sm text-grey-dark leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
     </div>
-</section><section class="font-sans container m-auto flex flex-col py-8 max-w-xl text-center px-6">
-  <label class="text-sm uppercase">9 May 2015</label>
-  <h1 class="my-8 max-w-full lg:max-w-lg m-auto text-3xl md:text-4xl lg:text-5xl font-light">Lorem Ipsum is simply dummy text of the printing</h1>
-  <p class="mt-0 lg:mt-4 max-w-md m-auto leading-normal mb-6 text-left">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-  <p class="max-w-md m-auto leading-normal mb-6 text-left">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
 </section></body>
 </html>
