add delete snippets functionality and fix couple templates

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             width: 100%;
             padding: 0;
         }
+        .js-droppable > .js-snippet:hover > .js-delete-btn{
+            display: block;
+        }
     </style>
     <title>Web Component Library</title>
   </head>
