--- a/stitches.html
+++ b/stitches.html
@@ -7,72 +7,42 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Stitches</title>
   </head>
-  <body><section class="font-sans container m-auto max-w-xl xl:max-w-lg flex flex-col flex-wrap sm:flex-row justify-center">
-  <div class="w-full sm:w-1/2 lg:w-1/4 text-center py-8">
-    <label for="" class="uppercase tracking-loose font-bold text-sm">Basic Plan</label>
-    <h1 for="" class="uppercase tracking-loose font-bold text-5xl my-2">$29<span class="text-grey-dark font-light text-xs">/mo</span></h1>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">5</strong>Projects</p>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">20</strong>Images</p>
-    <p class="mt-2 mb-6 text-grey-darker"><strong class="text-black pr-2">9/5</strong>Support</p>
-    <button class="bg-transparent hover:bg-black text-black-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
-    Buy Now
-    </button>
+  <body><section class="my-8 font-sans container m-auto max-w-xl ">
+  <div class="text-center">
+    <h1 class="my-4 font-light">Show Your Work</h1>
+    <p class="leading-normal mb-4 max-w-sm m-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
-  <div class="w-full sm:w-1/2 lg:w-1/4 text-center py-8">
-    <label for="" class="uppercase tracking-loose font-bold text-sm">Team Plan</label>
-    <h1 for="" class="uppercase tracking-loose font-bold text-5xl my-2">$59<span class="text-grey-dark font-light text-xs">/mo</span></h1>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">10</strong>Projects</p>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">40</strong>Images</p>
-    <p class="mt-2 mb-6 text-grey-darker"><strong class="text-black pr-2">12/7</strong>Support</p>
-    <button class="bg-transparent hover:bg-black text-black-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
-    Buy Now
-    </button>
-  </div>
-  <div class="w-full sm:w-1/2 lg:w-1/4 text-center py-8">
-    <label for="" class="uppercase tracking-loose font-bold text-sm">Corporate Plan</label>
-    <h1 for="" class="uppercase tracking-loose font-bold text-5xl my-2">$79<span class="text-grey-dark font-light text-xs">/mo</span></h1>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">Unlimited</strong>Projects</p>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">Unlimited</strong>Images</p>
-    <p class="mt-2 mb-6 text-grey-darker"><strong class="text-black pr-2">24/7</strong>Support</p>
-    <button class="bg-transparent hover:bg-black text-black-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
-    Buy Now
-    </button>
-  </div>
-  <div class="w-full sm:w-1/2 lg:w-1/4 text-center py-8">
-    <label for="" class="uppercase tracking-loose font-bold text-sm">Enterprise Plan</label>
-    <h1 for="" class="uppercase tracking-loose font-bold text-5xl my-2">$199<span class="text-grey-dark font-light text-xs">/mo</span></h1>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">Unlimited</strong>Projects</p>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">Unlimited</strong>Images</p>
-    <p class="mt-2 mb-6 text-grey-darker"><strong class="text-black pr-2">24/7</strong>Support</p>
-    <button class="bg-transparent hover:bg-black text-black-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
-    Buy Now
-    </button>
-  </div>
-</section><section class="font-sans container max-w-xl m-auto flex flex-col lg:flex-row justify-center my-8">
-  <div class="order-2 lg:order-1 w-full lg:w-1/4 flex flex-col items-center lg:items-end justify-end text-center lg:text-right ml-0 lg:ml-8 mt-8">
-    <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
-    <h3 class="text-black mb-2 font-light">Feature 1</h3>
-    <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
-    <h3 class="text-black mb-2 font-light">Feature 1</h3>
-    <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
-    <h3 class="text-black mb-2 font-light">Feature 1</h3>
-    <p class="text-sm text-grey-dark leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+  <div class="flex flex-col sm:flex-row flex-wrap my-8">
+    <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal">
+      <div class="w-12 h-12 rounded-full bg-grey-light" alt=""></div>
+      <h3 class="mt-4 mb-1 font-light">Digital</h3>
+      <p class="mt-4 text-center text-grey-dark leading-normal">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.</p>
     </div>
-  <div class="order-1 lg:order-2 w-full lg:w-1/2 max-w-sm m-auto mb-6 lg:mb-0">
-    <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210663/demo-phone.png" alt="">
-  </div>
-  <div class="order-last w-full lg:w-1/4 flex flex-col items-center lg:items-start justify-end text-center lg:text-left mt-8 mr-8">
-    <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
-    <h3 class="text-black mb-2 font-light">Feature 1</h3>
-    <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
-    <h3 class="text-black mb-2 font-light">Feature 1</h3>
-    <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
-    <h3 class="text-black mb-2 font-light">Feature 1</h3>
-    <p class="text-sm text-grey-dark leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal">
+      <div class="w-12 h-12 rounded-full bg-grey-light" alt=""></div>
+      <h3 class="mt-4 mb-1 font-light">Branding</h3>
+      <p class="mt-4 text-center text-grey-dark leading-normal">Praesent dapibus, neque id cursus faucibus, tortor neque egestas auguae, eu vulputate magna eros eu erat. Aliquam erat volutpat.</p>
     </div>
+    <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal">
+      <div class="w-12 h-12 rounded-full bg-grey-light" alt=""></div>
+      <h3 class="mt-4 mb-1 font-light">Excellence</h3>
+      <p class="mt-4 text-center text-grey-dark leading-normal">Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus.</p>
+    </div>
+    <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal">
+      <div class="w-12 h-12 rounded-full bg-grey-light" alt=""></div>
+      <h3 class="mt-4 mb-1 font-light">Strategy</h3>
+      <p class="mt-4 text-center text-grey-dark leading-normal">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.</p>
+    </div>
+    <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal">
+      <div class="w-12 h-12 rounded-full bg-grey-light" alt=""></div>
+      <h3 class="mt-4 mb-1 font-light">Design</h3>
+      <p class="mt-4 text-center text-grey-dark leading-normal">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+    </div>
+    <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8 border-grey-lightest  hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal">
+      <div class="w-12 h-12 rounded-full bg-grey-light" alt=""></div>
+      <h3 class="mt-4 mb-1 font-light">Development</h3>
+      <p class="mt-4 text-center text-grey-dark leading-normal">Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. </p>
+    </div>
+  </div>
 </section></body>
 </html>
