remove some unused css modules

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1 class="font-black mb-4">Stitches</h1>
       <div class="mx-2 mb-4 js-filter">
         <!-- General -->
-        <button class="bg-transparent hover:bg-black text-sm text-black font-semibold hover:text-white py-1 px-2 mr-2 my-1 border border-black hover:border-transparent rounded" data-filter="js-snippet">All</button>
+        <button class="bg-transparent hover:bg-black text-sm text-black font-semibold hover:text-white py-1 px-2 mr-2 my-1 border border-black hover:border-transparent focus:bg-black focus:text-whiterounded" data-filter="js-snippet">All</button>
         <button class="bg-transparent hover:bg-black text-sm text-black font-semibold hover:text-white py-1 px-2 mr-2 my-1 border border-black hover:border-transparent rounded" data-filter="st-navigation">Navigation</button>
         <button class="bg-transparent hover:bg-black text-sm text-black font-semibold hover:text-white py-1 px-2 mr-2 my-1 border border-black hover:border-transparent rounded" data-filter="st-footer">Footer</button>
         <button class="bg-transparent hover:bg-black text-sm text-black font-semibold hover:text-white py-1 px-2 mr-2 my-1 border border-black hover:border-transparent rounded" data-filter="st-form">Form</button>
