--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </section>
     <section class="bg-grey-lighter p-8 w-1/3 flex flex-col fixed pin-t pin-b pin-r overflow-y-scroll">
       <header class="mb-4">
-        <button class="shadow text-center py-3 px-4 bg-black w-full hover:bg-grey-darkest text-white js-download transition-normal">Download Stitched HTML</button>
+        <button class="shadow text-center py-3 px-4 bg-black w-full hover:text-green text-white js-download transition-normal">Download Stitched HTML</button>
       </header>
       <div class="flex flex-col flex-1 border js-droppable border-grey-lighter"></div>
       <div class="text-center text-grey-dark">Made by <a class="text-grey-darkest no-underline hover:underline font-semibold text-green" href="https://amie-chen.com">👾 Amie Chen</a></div>
