add style for filters

--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
   </head>
   <body class="overflow-hidden font-sans">
     <section class="fixed pin-l pin-t pin-b overflow-y-scroll bg-white p-8 w-2/3">
-      <h1 class="font-black mb-4 ml-3"><a href="/" class="no-underline text-black">Stitches</a></h1>
-      <div class="mx-2 mb-4 js-filter">
+      <h1 class="font-black mb-4 ml-2"><a href="/" class="no-underline text-black">Stitches</a></h1>
+      <div class="border-l-2 mx-2 mb-4 js-filter pl-3 border-black">
         <!-- General -->
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="js-snippet">All</button>
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-navigation">Navigation</button>
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-footer">Footer</button>
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-form">Form</button>
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-list">List</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="js-snippet">All</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-navigation">Navigation</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-footer">Footer</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-form">Form</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-list">List</button>
         <!-- Marketing -->
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-hero">Hero</button>
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-feature">Features</button>
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-pricing">Pricing</button>
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-article">Articles</button>
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-cta">Call to Action</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-hero">Hero</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-feature">Features</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-pricing">Pricing</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-article">Articles</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-cta">Call to Action</button>
         <!-- Application -->
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-progress">Progress Bar</button>
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-feed">Feed/Comments</button>
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-notification">Notification</button>
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-stats">Stats</button>
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-cards">Cards</button>
-        <button class="text-grey-dark font-medium hover:text-black hover:underline px-2 py-1 transition-normal" data-filter="st-tabs">Tabs</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-progress">Progress Bar</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-feed">Feed/Comments</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-notification">Notification</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-stats">Stats</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-cards">Cards</button>
+        <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-tabs">Tabs</button>
       </div>
       <div class="flex flex-wrap flex-col items-start justify-start js-snippets">
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-1">
@@ -146,7 +146,7 @@
         <button class="shadow text-center py-3 px-4 bg-black w-full hover:text-green text-white js-download transition-normal">Download Stitched HTML</button>
       </header>
       <div class="flex flex-col flex-1 border js-droppable border-grey-lighter"></div>
-      <div class="text-center text-grey-dark">Made by <a class="text-grey-darkest no-underline hover:underline font-semibold text-green" href="https://amie-chen.com">👾 Amie Chen</a></div>
+      <div class="text-center text-black">Made by <a class="textgreene hover:ugreend text-green" href="https://amie-chen.com">👾 Amie Chen</a></div>
     <div class="bg-white hidden fixed js-delete-btn px-4 py-2 shadow">Delete <i class="far fa-trash-alt"></i></div>
     </section>
     <script src="bundle.js"></script>
