fix couple things in the side panel

--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
         </figure>
       </div>
     </section>
-    <section class="bg-grey-lighter p-8 w-1/3 flex flex-col fixed pin-t pin-b pin-r overflow-y-scroll">
+    <section class="bg-grey-lighter p-8 pb-0 w-1/3 flex flex-col fixed pin-t pin-b pin-r">
       <header class="mb-4">
-        <button class="shadow text-center py-3 px-4 bg-black w-full hover:text-green text-white js-download transition-normal">Download Stitched HTML</button>
+        <button class="shadow text-center py-3 px-4 bg-black w-full hover:text-green text-white js-download transition-normal">Generate HTML with Functional CSS</button>
       </header>
-      <div class="flex flex-col flex-1 border js-droppable border-grey-lighter"></div>
-      <div class="text-center text-black">Made by <a class="textgreene hover:ugreend text-green" href="https://amie-chen.com">👾 Amie Chen</a></div>
-    <div class="bg-white hidden fixed js-delete-btn px-4 py-2 shadow">Delete <i class="far fa-trash-alt"></i></div>
+      <div class="flex flex-col flex-1 border js-droppable border-grey-lighter overflow-y-scroll"></div>
+      <div class="text-center text-black py-4">Made by <a class="textgreene hover:ugreend text-green" href="https://amie-chen.com">👾 Amie Chen</a></div>
+    <div class="bg-white hidden fixed js-delete-btn px-4 py-2 shadow">Delete <i class="far fa-trash-alt pointer-events-none"></i></div>
     </section>
     <script src="bundle.js"></script>
   </body>
