--- a/stitches.html
+++ b/stitches.html
@@ -7,5 +7,99 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Stitches</title>
   </head>
-  <body></body>
+  <body><section class="font-sans h-screen w-full bg-cover text-center flex flex-col items-center justify-center" style="background:url(https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png) no-repeat center;">
+  <div class="bg-white text-black rounded-full h-16 w-16 flex items-center justify-center mb-8"><i class="fas fa-play ml-1"></i></div>
+  <label for="tagline" class="uppercase tracking-extrawide text-white text-xs font-hairline mt-8">Watch Video</label>
+  <h3 class="text-white mx-auto max-w-sm mt-4 font-normal text-2xl leading-normal">Differentiate Yourself And Attract More Attention Sales And Profits</h3>
+</section><section class="font-sans container max-w-xl m-auto flex flex-col lg:flex-row justify-center my-8">
+  <div class="order-2 lg:order-1 w-full lg:w-1/4 flex flex-col items-center lg:items-end justify-center text-center lg:text-right ml-0 lg:ml-8 mt-8">
+    <div class="w-12 h-12 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
+    <h2 class="text-black mb-2 font-normal">Praesent placerat.</h2>
+    <p class="text-grey-darker leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    <div class="w-12 h-12 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
+    <h2 class="text-black mb-2 font-normal">Fusce pellentesque suscipit nibh.</h2>
+    <p class="text-grey-darker leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    <div class="w-12 h-12 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
+    <h2 class="text-black mb-2 font-normal">Ut aliquam sollicitudin leo.</h2>
+    <p class="text-grey-darker leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    </div>
+  <div class="order-1 lg:order-2 w-full lg:w-1/2 max-w-sm m-auto mb-6 lg:mb-0">
+    <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210663/demo-phone.png" alt="">
+  </div>
+  <div class="order-last w-full lg:w-1/4 flex flex-col items-center lg:items-start justify-center text-center lg:text-left mt-8 mr-8">
+    <div class="w-12 h-12 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
+    <h2 class="text-black mb-2 font-normal">Cras iaculis ultricies nulla.</h2>
+    <p class="text-grey-darker leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    <div class="w-12 h-12 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
+    <h2 class="text-black mb-2 font-normal">Praesent placerat risus quis eros.</h2>
+    <p class="text-grey-darker leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    <div class="w-12 h-12 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
+    <h2 class="text-black mb-2 font-normal">Nunc dignissim risus id metus.</h2>
+    <p class="text-grey-darker leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    </div>
+</section><section class="font-sans container m-auto text-center py-8">
+  <label for="tagline" class="uppercase tracking-wide font-bold text-grey-dark">Various Aspects</label>
+  <h1 class="mt-2 mb-4 font-medium max-w-sm m-auto">Those are important in Vanue Management</h1>
+  <hr class="border-b w-8 m-auto my-6">
+  <div class="flex flex-wrap justify-between items-start">
+    <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
+      <div class="w-14 h-14 rounded-full mr-4 bg-grey-light" alt=""></div>
+      <h2 class="my-4 font-medium">Cras ornare tristique elit.</h2>
+      <p class="leading-normal mb-4 text-grey-dark">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.</p>
+    </div>
+    <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
+      <div class="w-14 h-14 rounded-full mr-4 bg-grey-light" alt=""></div>
+      <h2 class="my-4 font-medium">Vivamus vestibulum ntulla nec ante.</h2>
+      <p class="leading-normal mb-4 text-grey-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
+      <div class="w-14 h-14 rounded-full mr-4 bg-grey-light" alt=""></div>
+      <h2 class="my-4 font-medium">Praesent placerat risus quis eros.</h2>
+      <p class="leading-normal mb-4 text-grey-dark">Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</p>
+    </div>
+    <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
+      <div class="w-14 h-14 rounded-full mr-4 bg-grey-light" alt=""></div>
+      <h2 class="my-4 font-medium">Fusce pellentesque suscipit nibh.</h2>
+      <p class="leading-normal mb-4 text-grey-dark">Praesent dapibus, neque id cursus faucibus, tortor neque egestas auguae, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</p>
+    </div>
+  </div>
+</section><footer class="font-sans bg-black text-white py-8 px-4">
+  <div class="mx-auto container overflow-hidden flex flex-col lg:flex-row justify-between">
+    <a href="/" class="block mr-4 w-1/2">
+      <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210395/stitches/logo-white.png" class="w-32" alt="logo">
+    </a>
+    <div class="w-1/2 flex text-sm mt-6 lg:mt-0">
+      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
+        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wide">Product</li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Popular</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Trending</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Catalog</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Features</a></li>
+      </ul>
+      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
+        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wide">Company</li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Press Release</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Mission</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Strategy</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Works</a></li>
+      </ul>
+      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
+        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wide">Info</li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Support</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Developers</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Customer Services</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Started Guide</a></li>
+      </ul>
+      <div class="text-grey-dark flex flex-col">
+        <div class="inline-block py-2 px-3 text-white uppercase font-medium tracking-wide">Follow Us</div>
+        <div class="flex pl-4 justify-start">
+          <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
+          <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
+          <a class="block flex items-center text-white hover:text-grey no-underline" href="#"><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="pt-4 mt-4 text-grey-darker border-t border-grey-darkest text-center"> ©2018 Hyperyolo. All rights reserved.</div>
+</footer></body>
 </html>
